re PR c++/12726 (ICE (segfault) on trivial code)

PR c++/12726
        * tree.c (build_target_expr_with_type): Don't call force_rvalue
        for CONSTRUCTORs.

From-SVN: r72837