gcc/cp/tree.c
@@ -311,10 +311,12 @@ build_target_expr_with_type (tree init, tree type)
   if (TREE_CODE (init) == TARGET_EXPR)
     return init;
   else if (CLASS_TYPE_P (type) && !TYPE_HAS_TRIVIAL_INIT_REF (type)
-	   && TREE_CODE (init) != COND_EXPR)
+	   && TREE_CODE (init) != COND_EXPR
+	   && TREE_CODE (init) != CONSTRUCTOR)
     /* We need to build up a copy constructor call.  COND_EXPR is a special
        case because we already have copies on the arms and we don't want
-       another one here.  */
+       another one here.  A CONSTRUCTOR is aggregate initialization, which
+       is handled separately.  */
     return force_rvalue (init);
 
   slot = build_decl (VAR_DECL, NULL_TREE, type);
