gcc/testsuite/g++.dg/ext/complit2.C
@@ -1,0 +1,17 @@
+// PR c++/12726
+// { dg-options "" }
+
+#include <string>
+ 
+struct foobar {
+  std::string s;
+};
+ 
+int main(int argc, char **argv)
+{
+  foobar fb;
+
+  fb = (foobar) { "abcd" };
+
+  return 0;
+}
